--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
+    "html-to-docx": "^1.8.0",
+    "openai": "^3.2.1",
+    "puppeteer": "^19.9.0"
   }
 }
