--- a/.github/workflows/main_jobbsokerenapi.yml
+++ b/.github/workflows/main_jobbsokerenapi.yml
@@ -22,6 +22,10 @@ jobs:
           node-version: '16.x'
 
       - name: npm install, build, and test
+        env:
+          OPENAI_ORGANIZATION_ID: ${{ secrets.OPENAI_ORGANIZATION_ID }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
         run: |
           npm install
           npm run build --if-present
