--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-to-docx": "^1.8.0",
     "openai": "^3.2.1",
     "puppeteer": "^18",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "wkhtmltopdf": "^0.4.0"
   }
 }
