--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
     "html-to-docx": "^1.8.0",
+    "mailchimp-api-v3": "^1.15.0",
     "openai": "^3.2.1",
     "puppeteer": "^18",
     "winston": "^3.8.2",
