--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^11.9.0",
     "html-to-docx": "^1.8.0",
     "mailchimp-api-v3": "^1.15.0",
     "openai": "^3.2.1",
