--- a/.github/workflows/main_jobbsokerenapi.yml
+++ b/.github/workflows/main_jobbsokerenapi.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-
 name: Build and deploy Node.js app to Azure Web App - jobbsokerenAPI
 
 on:
@@ -22,7 +18,6 @@ jobs:
         with:
           node-version: '16.x'
 
-
       - name: npm install, build, and test
         env:
           OPENAI_ORGANIZATION_ID: ${{ secrets.OPENAI_ORGANIZATION_ID }}
@@ -30,10 +25,12 @@ jobs:
           CORS_ORIGIN: ${{ secrets.CORS_ORIGIN }}
           MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
           MAILCHIMP_LIST_ID: ${{ secrets.MAILCHIMP_LIST_ID }}
-          
         run: |
           npm install
           npm run build --if-present
+
+      - name: Create Service Account Key file
+        run: echo '${{ secrets.SERVICE_ACCOUNT_KEY }}' > ./serviceAccountKey.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -62,4 +59,3 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0C0942AC7DC84979BEBF8ED289BAE341 }}
           package: .
-
