--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "mailchimp-api-v3": "^1.15.0",
     "openai": "^3.2.1",
     "puppeteer": "^18",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "winston": "^3.8.2",
-    "wkhtmltopdf": "^0.4.0"
+    "wkhtmltopdf": "^0.4.0",
+    "yamljs": "^0.3.0"
   }
 }
